feat: added a home page (unfinished)

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Trivia 2"
+rootProject.name = "Clonify"
 include ':app'
